Fixed bug with modal dialog box on iOS 5

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -104,7 +104,7 @@ ul {
   margin-left: auto;
   margin-right: auto;
   padding: 21px 0px 10px 0px;
-  opacity: 0.51;
+  opacity: 0.6;
 }
 .alert {
   width: 94%;
